tests/invalid/tuple_empty_dynamic_index/main.py
def main() -> None:
    t = ()
    i: int = 0
    x = t[i]
